# teddybear-hospital-application

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: requirements.txt
backend/routes/: __init__.py  api.py  fracture_tool4.py  jobqueue.py
backend/storage/: storage.py
doc/: api.rst  install.rst
frontend/: README.md  TESTING.md  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: auth.spec.ts  navigation.spec.ts
frontend/src/lib/images/login/: login.ts
frontend/src/routes/carousel/: Gallery.svelte
frontend/src/routes/dev/: +page.svelte  PaintableImage.svelte
tests/: conftest.py  test_api_endpoints.py  test_config.py  test_fracture_tool.py  test_jobqueue.py  test_main_app.py  test_seafile_main.py  test_seafile_utils.py  test_storage.py
