# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for teddy_hospital's version
[project]
name = "teddy-hospital"
description = "Web application for AI generation of x-rays of teddys."
readme = "README.md"
maintainers = [
    { name = "Tarik Cavalcanti", email = "tarikcavalcanti12@gmail.com" },
]
version = "0.0.1"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
]


# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "backend",
]

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["backend"]

[tool.coverage.report]
show_missing = true
skip_covered = false
